# LabVir_moveit_ur10_lab1_new

./: LabVir_moveit_ur10_lab1_new.code-workspace  README.md  frames.gv  pick_and_place.md
.devcontainer/: Dockerfile  devcontainer.json
catkin_ws/: controladores_disponiveis.txt  erro.txt  frames.gv  pick_pos.txt  piclace_pos.txt  place_pos.txt
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/src/config/: fake_controllers.yaml  gazebo_ur10_with_gripper.urdf  simple_moveit_controllers.yaml  ur10_with_gripper.srdf
catkin_ws/src/launch/: gazebo.launch  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml
catkin_ws/src/pick_and_place_ik/: CMakeLists.txt
catkin_ws/src/pick_and_place_ik/scene/: cena3.scene
catkin_ws/src/pick_and_place_ik/src/: ur10_pick_place.cpp
catkin_ws/src/schunk_pg70/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/schunk_pg70/action/: Grasp.action  Move.action
catkin_ws/src/schunk_pg70/include/: pg70_common.h  pg70_rs232_control.h
catkin_ws/src/schunk_pg70/include/pg70_action_server/: pg70_grasp_action_server.h  pg70_move_action_server.h
catkin_ws/src/schunk_pg70/launch/: pg70_as.launch  pg70_control.launch  pg70_full.launch
catkin_ws/src/schunk_pg70/meshes/: Flange_pg70.stl  PANDA_finger.stl
catkin_ws/src/schunk_pg70/msg/: message_control_position.msg
catkin_ws/src/schunk_pg70/src/: pg70_control_position.cpp  pg70_grasp_action_server.cpp  pg70_move_action_server.cpp  pg70_rs232_control_lib.cpp  pg70_rs232_control_node.cpp
catkin_ws/src/schunk_pg70/srv/: get_current.srv  move_time.srv  set_pvac.srv
catkin_ws/src/schunk_pg70/urdf/: pg70_remodel.urdf.xacro  pg70_tactile.urdf.xacro
catkin_ws/src/ur10_gripper_config/: .setup_assistant  CMakeLists.txt
catkin_ws/src/ur10_gripper_config/config/: fake_controllers.yaml  gazebo_ur10_with_gripper.urdf  ros_controllers.yaml  ur10_with_gripper.srdf
catkin_ws/src/ur10_gripper_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  moveit_pickplace.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  (+3 more)
catkin_ws/src/ur10_moveit_lab/: CMakeLists.txt
catkin_ws/src/ur10_moveit_with_gripper_config/: .setup_assistant  CMakeLists.txt
catkin_ws/src/ur10_with_gripper/: CMakeLists.txt  package.xml
scripts/: LabVir_moveit_ur10_lab1_back2.code-workspace  init_ros.sh  start-vnc.sh
(+66 files in other folders)
